--- a/SQL工作日志/2023年2月14日.md
+++ b/SQL工作日志/2023年2月14日.md
@@ -7,11 +7,13 @@
 A列描绘1，2，3，4，5或多项，将多项数据拆分
 
 ## 寻求答案
-- [SUBSRTRING_INDEX](https://blog.csdn.net/weixin_45395031/article/details/108779977)
+- [SUBSRTRING_INDEX](https://blog.csdn.net/weixin_45395031/article/details/108779977)  
 - [SUBSTRING](https://blog.csdn.net/u012949335/article/details/118852731)
 
 ## 后续LEARNING
 - SUBSTRING_INDEX, REPLACE, LENGTH （在代码中都是属于普通的逻辑问题
 
 ## 新问题
-- 使用SUBSTRING的博客中，`with(nolock)` `master..spt_values` `type='p'` 都还未明白是什么（事已至此摸鱼鸟）
+- `master..spt_values` [master..spt_values](https://www.cnblogs.com/kingboy2008/p/3978007.html)
+- `type='p'` P就代表存储过程，对象分类型和名称，这个P就属于类型范畴。F表示函数，U表是表，V表示视图
+- `with(nolock)` 查询是不锁定表,从而达到提高查询速度的目的
